# fauna-lab

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  start.bat  start.ps1  start.sh
backend/: environment.yml  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  schemas.py  storage.py
backend/app/models/: __init__.py  classifier.py
backend/app/routers/: __init__.py  dataset.py  inference.py  models.py  settings.py  train.py
backend/app/services/: dataset_manager.py  model_registry.py  predictor.py  trainer.py
docs/superpowers/specs/: 2026-04-14-project-worklist-redesign-design.md  2026-04-15-inference-first-next-phase-design.md
frontend/: .eslintrc.cjs  .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: main.tsx  router.tsx  styles.css
frontend/src/app/: router.tsx
frontend/src/atoms/: theme.ts
frontend/src/components/: AppShell.tsx
frontend/src/pages/: DatasetPage.tsx  InferencePage.tsx  ModelsPage.tsx  TrainPage.tsx  _layout.tsx  dataset.tsx  index.tsx  inference.tsx  models.tsx  not-found.tsx  train.tsx
frontend/src/services/: dataset.ts  http.ts  settings.ts  train.ts
frontend/src/styles/: index.css
frontend/src/themes/: themeOptions.ts  types.ts
frontend/src/themes/default/: config.ts
frontend/src/themes/zoo/: config.ts
scripts/: dev.bat  dev.ps1  dev.sh
